--- a/.github/success_slack_message.tmpl
+++ b/.github/success_slack_message.tmpl
@@ -1,30 +1,30 @@
 \'{
-\"channel\":\"C02AJKXC8UT\",
-\"color\": \"#36a64f\",
-\"blocks\": [
+\\"channel\\":\\"C02AJKXC8UT\\",
+\\"color\\": \\"#36a64f\\",
+\\"blocks\\": [
 {
-  \"type\": \"section\",
-  \"text\": {
-    \"type\": \"mrkdwn\",
-    \"text\": \"Hello, Assistant to the Regional Manager Dwight! *Michael Scott* wants to know where youd like to take the Paper Company investors to dinner tonight.\n\n *Please select a restaurant:*\"
+  \\"type\\": \\"section\\",
+  \\"text\\": {
+    \\"type\\": \\"mrkdwn\\",
+    \\"text\\": \\"Hello, Assistant to the Regional Manager Dwight! *Michael Scott* wants to know where youd like to take the Paper Company investors to dinner tonight.\\n\\n *Please select a restaurant:*\\"
   }
 },
 {
-  \"type\": \"section\",
-  \"text\": {
-    \"type\": \"mrkdwn\",
-    \"text\": \"This is a section block with a button.\"
+  \\"type\\": \\"section\\",
+  \\"text\\": {
+    \\"type\\": \\"mrkdwn\\",
+    \\"text\\": \\"This is a section block with a button.\\"
   },
-  \"accessory\": {
-    \"type\": \"button\",
-    \"text\": {
-      \"type\": \"plain_text\",
-      \"text\": \"Click Me\",
-      \"emoji\": true
+  \\"accessory\\": {
+    \\"type\\": \\"button\\",
+    \\"text\\": {
+      \\"type\\": \\"plain_text\\",
+      \\"text\\": \\"Click Me\\",
+      \\"emoji\\": true
     },
-    \"value\": \"click_me_123\",
-    \"url\": \"https://google.com\",
-    \"action_id\": \"button-action\"
+    \\"value\\": \\"click_me_123\\",
+    \\"url\\": \\"https://google.com\\",
+    \\"action_id\\": \\"button-action\\"
   }
 }
 ]
