--- a/.github/canceled_slack_message.tmpl
+++ b/.github/canceled_slack_message.tmpl
@@ -6,7 +6,7 @@
   \\\"type\\\": \\\"section\\\",
   \\\"text\\\": {
     \\\"type\\\": \\\"mrkdwn\\\",
-    \\\"text\\\": \\\"Hello, Assistant to the Regional Manager Dwight! *Michael Scott* wants to know where youd like to take the Paper Company investors to dinner tonight.\\\n\\\n *Please select a restaurant:*\\\"
+    \\\"text\\\": \\\"CANCELED\\\"
   }
 },
 {
