--- a/.github/successed_slack_message.tmpl
+++ b/.github/successed_slack_message.tmpl
@@ -1,31 +1,31 @@
-'{
-\"channel\":\"C02AJKXC8UT\",
-\"color\": \"#36a64f\",
-\"blocks\": [
 {
-  \"type\": \"section\",
-  \"text\": {
-    \"type\": \"mrkdwn\",
-    \"text\": \"SUCCESS\"
-  }
-},
-{
-  \"type\": \"section\",
-  \"text\": {
-    \"type\": \"mrkdwn\",
-    \"text\": \"This is a section block with a button.\"
-  },
-  \"accessory\": {
-    \"type\": \"button\",
-    \"text\": {
-      \"type\": \"plain_text\",
-      \"text\": \"Click Me\",
-      \"emoji\": true
+  "channel":"C02AJKXC8UT",
+  "color": "#36a64f",
+  "blocks": [
+    {
+      "type": "section",
+      "text": {
+        "type": "mrkdwn",
+        "text": "SUCCESS"
+      }
     },
-    \"value\": \"click_me_123\",
-    \"url\": \"https://google.com\",
-    \"action_id\": \"button-action\"
-  }
+    {
+      "type": "section",
+      "text": {
+        "type": "mrkdwn",
+        "text": "This is a section block with a button."
+      },
+      "accessory": {
+        "type": "button",
+        "text": {
+          "type": "plain_text",
+          "text": "Click Me",
+          "emoji": true
+        },
+        "value": "click_me_123",
+        "url": "https://google.com",
+        "action_id": "button-action"
+      }
+    }
+  ]
 }
-]
-}'
